# zynex-ai

./: .dockerignore  .env.example  .gitignore  AI_HANDOFF_DOCUMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMPT_FOR_NEXT_AI.md  README.md  SECURITY.md  docker-compose.yml  generate_assets.py  generate_vertical.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py
.agents/skills/testing-zynex-ai/: SKILL.md
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py
backend/agents/: __init__.py  chart_generator.py  export_engine.py  query_planner.py  report_composer.py  source_analyzer.py  web_researcher.py
backend/middleware/: rate_limit.py  request_id.py
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  auth.py  chat.py  health.py  research.py
backend/services/: __init__.py  llm_client.py  openai_service.py  search_client.py
backend/templates/: report.html  slides.html
backend/utils/: sanitize.py
demo-assets/: demo-script.md
demo-assets/videos/: 01-overview-demo.webm
docs/: AI_HANDOFF_DOCUMENT.md  ARCHITECTURE.md  DEPLOYMENT.md  test-plan.md  test-report.md
docs/compose/plans/: 2026-07-04-zynex-ai-redesign-plan.md
docs/compose/specs/: 2026-07-04-zynex-ai-redesign-design.md
frontend/: index.html  manifest.json
frontend/css/: animations.css  base.css  chat.css  components.css  layout.css  style.css
frontend/js/: animations.js  app.js  chat.js  markdown.js  storage.js  streaming.js  ui.js
scripts/: test_api_e2e.py  test_pipeline.py  verify_openrouter.py
