[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zynex"
version = "1.0.0"
description = "AI-Powered Research Agent — Autonomous web research, analysis, and professional report generation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shahab Ahmed", email = "shahabahmed@example.com"},
]
keywords = [
    "ai",
    "research",
    "agent",
    "report-generation",
    "fastapi",
    "llm",
    "web-search",
    "pdf",
    "autonomous",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.6.0",
    "duckduckgo-search>=4.0.0",
    "weasyprint>=60.0",
    "matplotlib>=3.8.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/Shahabahmed01/zynex-ai"
Repository = "https://github.com/Shahabahmed01/zynex-ai"
Issues = "https://github.com/Shahabahmed01/zynex-ai/issues"
Changelog = "https://github.com/Shahabahmed01/zynex-ai/blob/main/CHANGELOG.md"

[project.scripts]
zynex = "backend.main:start"

# ── Tool Configuration ──────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.setuptools.packages.find]
include = ["backend*"]
